--- a/html2epub/makefile
+++ b/html2epub/makefile
@@ -1,4 +1,4 @@
-# Copyright (C) 2014  Stephan Kreutzer
+# Copyright (C) 2014-2015  Stephan Kreutzer
 #
 # This file is part of automated_digital_publishing.
 #
@@ -16,7 +16,7 @@
 
 
 
-directories = ./html2epub1
+directories = ./html2epub1 ./html2epub2
 
 
 
