epubcheck GUI added.

--- a/epubcheck/makefile
+++ b/epubcheck/makefile
@@ -1,4 +1,4 @@
-# Copyright (C) 2014-2015  Stephan Kreutzer
+# Copyright (C) 2015  Stephan Kreutzer
 #
 # This file is part of automated_digital_publishing.
 #
@@ -16,11 +16,11 @@
 
 
 
-directories = ./bommanager ./csv2xml ./downloader ./epub2html ./epubcheck ./gui ./html2epub ./html2latex ./html2wordpress ./html_attributeanalyzer ./html_attributereplace ./html_concatenate ./html_flat2hierarchical ./html_split ./latex ./odt2html ./schemavalidator ./txtreplace ./unzip ./workflows ./xml_fix_special_characters_escaping ./xml_split ./xsltransformator
+directories = ./epubcheck1
 
 
 
-.PHONY: all $(directories) install
+.PHONY: all $(directories)
 
 
 
@@ -30,7 +30,4 @@ all: $(directories)
 
 $(directories):
 	$(MAKE) --directory=$@
-
-install:
-	java -classpath ./workflows/ setup1
 
