xml_fix_special_characters_escaping1: Ampersand escaping improved, quotation mark escaping added.

--- a/xml_fix_special_characters_escaping/xml_fix_special_characters_escaping1/makefile
+++ b/xml_fix_special_characters_escaping/xml_fix_special_characters_escaping1/makefile
@@ -30,4 +30,5 @@ xml_fix_special_characters_escaping1.class: xml_fix_special_characters_escaping1
 
 clean:
 	rm -f xml_fix_special_characters_escaping1.class
+	rm -f Sequence.class
 
