epubcheck1_recursive_checker1: Several minor improvements.

--- a/epubcheck/epubcheck1/workflows/gui/epubcheck1_recursive_checker1/i10n/makefile
+++ b/epubcheck/epubcheck1/workflows/gui/epubcheck1_recursive_checker1/i10n/makefile
@@ -1,4 +1,4 @@
-# Copyright (C) 2015-2017  Stephan Kreutzer
+# Copyright (C) 2017  Stephan Kreutzer
 #
 # This file is part of epubcheck1_recursive_checker1 GUI.
 #
@@ -14,7 +14,23 @@
 # You should have received a copy of the GNU Affero General Public License 3
 # along with epubcheck1_recursive_checker1 GUI. If not, see <http://www.gnu.org/licenses/>.
 
-dialogCaption = Overwrite existing jobfile?
-labelDescription = There''s a file already existing at the given path. Overwrite?
-buttonYesCaption = Yes
-buttonNoCaption = No
+
+
+.PHONY: all i10n clean
+
+
+
+all: i10n
+i10n: i10nSaveJobfileOverrideDialogGUIObjects.class i10nSaveJobfileOverrideDialogGUIObjects_de.class
+
+
+
+i10nSaveJobfileOverrideDialogGUIObjects.class: i10nSaveJobfileOverrideDialogGUIObjects.java
+	javac i10nSaveJobfileOverrideDialogGUIObjects.java
+
+i10nSaveJobfileOverrideDialogGUIObjects_de.class: i10nSaveJobfileOverrideDialogGUIObjects_de.java
+	javac i10nSaveJobfileOverrideDialogGUIObjects_de.java
+
+clean:
+	rm -f i10nSaveJobfileOverrideDialogGUIObjects_de.class
+	rm -f i10nSaveJobfileOverrideDialogGUIObjects.class
